# alpha_indicator

./: README.md  main.py  requirements.txt
engine/: __init__.py  feature_engine.py  integration.py  models.py  signals.py  strategy_runner.py  test_features.py
tax_filing_platform/backend/: Dockerfile  alembic.ini  pyproject.toml
tax_filing_platform/backend/alembic/: env.py
tax_filing_platform/backend/alembic/versions/: 0001_initial.py
tax_filing_platform/backend/app/: config.py  database.py  main.py
tax_filing_platform/backend/app/api/: routes.py
tax_filing_platform/backend/app/audit/: README.md
tax_filing_platform/backend/app/integrations/: irs_efile_provider.py  kyc_provider.py  state_tax_provider.py  storage_provider.py
tax_filing_platform/backend/app/models/: __init__.py  audit_log.py  document.py  enums.py  filing.py  payment.py  user.py
tax_filing_platform/backend/app/schemas/: document.py  filing.py  payment.py  user.py
tax_filing_platform/backend/app/security/: input_validation.py  jwt.py  permissions.py  rate_limit.py
tax_filing_platform/backend/app/services/: audit_service.py  auth_service.py  blockchain_service.py  document_service.py  encryption_service.py  filing_service.py  payment_service.py  tax_validation_service.py
tax_filing_platform/backend/app/workers/: event_listener.py  filing_processor.py  status_reconciler.py
tax_filing_platform/backend/tests/: conftest.py  test_api.py  test_encryption.py  test_migrations.py  test_provider_and_reconcile.py  test_status_transitions.py  test_upload_validation.py
ui/: dashboard.py
(+20 files in other folders)
