[project]
name = "tax-filing-platform-backend"
version = "0.1.0"
description = "FastAPI backend for secure tax filing payment and workflow platform"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "bcrypt==4.0.1",
  "cryptography>=42",
  "email-validator>=2.1",
  "fastapi>=0.111",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.1",
  "pydantic-settings>=2.2",
  "pyjwt>=2.8",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
test = ["httpx>=0.27", "pytest>=8", "pytest-asyncio>=0.23", "vyper>=0.3.10,<0.4"]
dev = ["ruff>=0.4", "mypy>=1.10"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.api", "app.audit", "app.integrations", "app.models", "app.schemas", "app.security", "app.services", "app.workers"]

[tool.pytest.ini_options]
testpaths = ["tests", "../contracts/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"
